--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "typescript": "^4.1.5"
   },
   "devDependencies": {
+    "@types/js-cookie": "^2.2.6",
     "@types/node": "^14.14.31",
     "@types/react": "^17.0.2",
-    "@types/react-dom": "^17.0.1"
+    "@types/react-dom": "^17.0.1",
+    "js-cookie": "^2.2.1"
   }
 }
